--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,14 @@
     "pug-bem": "^1.2.2",
     "vue": "^2.6.14",
     "vue-class-component": "^7.2.3",
+    "vue-clickaway": "^2.2.2",
     "vue-loader": "^17.0.0",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@types/vue-clickaway": "^2.2.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-typescript": "^5.0.1",
